--- a/app/assets/stylesheets/admin/variables.scss
+++ b/app/assets/stylesheets/admin/variables.scss
@@ -1,3 +1,9 @@
-$font-primary: "Roboto", sans-serif;
-$primary: #673BB7;
-$seconday: #EDE7F6;
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Play:wght@400;700&display=swap');
+@import url('https://fonts.gstatic.com');
+@import url('https://fonts.googleapis.com');
+
+$font-primary: "Hanken Grotesk", sans-serif;
+// $primary: #673BB7;
+$primary: #FF6D2F;
+$seconday: #FFDACD;
+// $seconday: #EDE7F6;
