--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,13 +7,9 @@
   <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
   <%= stylesheet_link_tag 'admin', media: 'all' %>
   <%= javascript_include_tag 'admin' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %> 
 </head>
 <body class="h-screen flex flex-col">
-  <!-- Header -->
-  <header>
-    <%= render 'layouts/admin/header' %>
-  </header>
 
   <!-- Main Content Wrapper -->
   <main class="flex flex-grow overflow-hidden">
@@ -23,14 +19,15 @@
     </div>
 
     <!-- Main Content -->
-    <div class="w-5/6 bg-tertiary h-full overflow-y-auto p-4 rounded-2xl mr-6 mt-2">
+    <div class="w-5/6 bg-tertiary h-full overflow-y-auto p-4 mr-6 mt-2">
+      <!-- Header -->
+      <header>
+        <%= render 'layouts/admin/header' %>
+      </header>
+      <div id="root"></div>
       <%= yield %>
+      <%= render 'layouts/admin/toast_container' %>
     </div>
   </main>
-
-  <!-- Footer -->
-  <%# <footer class="bg-gray-800 text-white text-center py-2">
-    <p>Admin Footer</p>
-  </footer> %>
 </body>
 </html>
