--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -1,22 +1,32 @@
-<div class="flex flex-col h-full w-full bg-white text-black px-3 ">
-  <nav class="flex flex-col mt-4">
-    <%= link_to admin_root_path, class: "flex items-center text-sm px-4 py-3 hover:bg-secondary hover:rounded-full #{active_class('admin/dashboard')}" do %>
-    <svg width="20px" height="20px" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g fill="none" fill-rule="evenodd" transform="translate(2 3)"> <path d="m14 14c1.4477153-1.4477153 2.5-3.290861 2.5-5.5 0-4.418278-3.581722-8-8-8s-8 3.581722-8 8c0 2.209139 1.05228475 4.0522847 2.5 5.5" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <path d="m8.5 8.5-4-4" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <circle cx="8.5" cy="8.5" fill="#000000" r="1.5"></circle> </g> </g></svg>      
-    <span class="ml-2">Dashboard</span>
+<div class="flex flex-col h-full w-full bg-gray-500 text-black ">
+  <div class="logo mt-5 mb-8">
+    <div class="flex gap-2 items-center justify-center">
+      <%= image_tag('https://techzaa.in/larkon/admin/assets/images/logo-sm.png', class: "w-6") %>
+      <h2 class="text-white font-bold text-3xl mb-0">Larkon</h2>
+    </div>
+  </div>
+  <p class="ml-4 text-gray-400 text-sm">General</p>
+  <nav class="flex flex-col mt-2">
+    <%= link_to admin_root_path, class: "flex items-center text-gray-400 text-sm px-4 py-3 #{active_class('admin/dashboard')}" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-layout-grid"><rect width="7" height="7" x="3" y="3" rx="1"/><rect width="7" height="7" x="14" y="3" rx="1"/><rect width="7" height="7" x="14" y="14" rx="1"/><rect width="7" height="7" x="3" y="14" rx="1"/></svg>      <span class="ml-2">Dashboard</span>
     <% end %>
 
-    <%= link_to admin_posts_path, class: "flex items-center text-sm px-4 py-3 hover:bg-secondary rounded-full #{active_class('admin/posts')}" do %>
-      <svg width="20px" height="20px" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g fill="none" fill-rule="evenodd" transform="translate(2 3)"> <path d="m14 14c1.4477153-1.4477153 2.5-3.290861 2.5-5.5 0-4.418278-3.581722-8-8-8s-8 3.581722-8 8c0 2.209139 1.05228475 4.0522847 2.5 5.5" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <path d="m8.5 8.5-4-4" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <circle cx="8.5" cy="8.5" fill="#000000" r="1.5"></circle> </g> </g></svg>      
+    <%= link_to admin_categories_path, class: "flex items-center text-gray-400 text-sm px-4 py-3 #{active_class('admin/categories')}" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-notepad-text ">
+        <path d="M8 2v4"/><path d="M12 2v4"/>
+        <path d="M16 2v4"/><rect width="16" height="18" x="4" y="4" rx="2"/>
+        <path d="M8 10h6"/><path d="M8 14h8"/><path d="M8 18h5"/>
+      </svg>    
       <span class="ml-2">Category</span>
     <% end %>
 
-    <%= link_to admin_posts_path, class: "flex items-center text-sm px-4 py-3 hover:bg-secondary rounded-full" do %>
-      <svg width="20px" height="20px" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g fill="none" fill-rule="evenodd" transform="translate(2 3)"> <path d="m14 14c1.4477153-1.4477153 2.5-3.290861 2.5-5.5 0-4.418278-3.581722-8-8-8s-8 3.581722-8 8c0 2.209139 1.05228475 4.0522847 2.5 5.5" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <path d="m8.5 8.5-4-4" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <circle cx="8.5" cy="8.5" fill="#000000" r="1.5"></circle> </g> </g></svg>      
+    <%= link_to admin_posts_path, class: "flex items-center text-gray-400 text-sm px-4 py-3" do %>
+      <svg width="20px" height="20px" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g fill="none" fillRule="evenodd" transform="translate(2 3)"> <path d="m14 14c1.4477153-1.4477153 2.5-3.290861 2.5-5.5 0-4.418278-3.581722-8-8-8s-8 3.581722-8 8c0 2.209139 1.05228475 4.0522847 2.5 5.5" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <path d="m8.5 8.5-4-4" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <circle cx="8.5" cy="8.5" fill="#000000" r="1.5"></circle> </g> </g></svg>      
       <span class="ml-2">Brand</span>
     <% end %>
 
-     <%= link_to admin_posts_path, class: "flex items-center text-sm px-4 py-3 hover:bg-secondary rounded-full" do %>
-      <svg width="20px" height="20px" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g fill="none" fill-rule="evenodd" transform="translate(2 3)"> <path d="m14 14c1.4477153-1.4477153 2.5-3.290861 2.5-5.5 0-4.418278-3.581722-8-8-8s-8 3.581722-8 8c0 2.209139 1.05228475 4.0522847 2.5 5.5" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <path d="m8.5 8.5-4-4" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <circle cx="8.5" cy="8.5" fill="#000000" r="1.5"></circle> </g> </g></svg>      
+     <%= link_to admin_posts_path, class: "flex items-center text-gray-400 text-sm px-4 py-3" do %>
+      <svg width="20px" height="20px" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g fill="none" fillRule="evenodd" transform="translate(2 3)"> <path d="m14 14c1.4477153-1.4477153 2.5-3.290861 2.5-5.5 0-4.418278-3.581722-8-8-8s-8 3.581722-8 8c0 2.209139 1.05228475 4.0522847 2.5 5.5" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <path d="m8.5 8.5-4-4" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"></path> <circle cx="8.5" cy="8.5" fill="#000000" r="1.5"></circle> </g> </g></svg>      
       <span class="ml-2">Product</span>
     <% end %>
   </nav>
