--- a/app/assets/stylesheets/admin/main.scss
+++ b/app/assets/stylesheets/admin/main.scss
@@ -32,3 +32,12 @@ body{
 p{
   margin: 0 !important;
 }
+
+@keyframes spin {
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
